--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Example user template template
-### Example user template
-
 # IntelliJ project files
 .idea
 *.iml
 out
 gen
 node_modules
+express_test/myapp/node_modules
