--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "3fuyu_blog",
-  "version": "1.0.0",
-  "description": "3fuyu_blog",
-  "main": "app.js",
+  "name": "blog",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "debug",
-    "start": "node myapp/bin/www"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/3fuyu/blog.git"
-  },
-  "author": "3fuyu",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "body-parser": "~1.15.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.13.4",
+    "jade": "~1.11.0",
+    "mongoose": "^4.5.8",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0"
   }
 }
