1.  重新优化了框架结构 2. 定义了api文件夹 3. 定义了router文件夹 4. 集成了lodash

--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "mongoose": "^4.5.8",
     "react": "^0.14.8",
-    "react-dom": "^0.14.8"
+    "react-dom": "^0.14.8",
+    "react-router": "^2.0.0"
   },
   "devDependencies": {
     "autosize": "^3.0.15",
