--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
+    "lodash": "^4.14.2",
     "mongoose": "^4.5.8",
     "morgan": "~1.7.0",
+    "react-router": "^2.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
