--- a/web/package.json
+++ b/web/package.json
@@ -34,12 +34,15 @@
     "gulp-uglify": "^1.5.3",
     "gulp-zip": "^3.2.0",
     "history": "^2.0.1",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "lodash": "^3.6.0",
+    "material-ui": "^0.15.4",
     "path": "^0.12.7",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8",
-    "react-hot-loader": "^1.3.0",
-    "react-router": "^2.0.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-hot-loader": "^3.0.0-beta.3",
+    "react-router": "^2.8.0",
     "reactify": "^1.1.0",
     "store": "1.3.20",
     "style-loader": "^0.13.0",
