--- a/web/package.json
+++ b/web/package.json
@@ -10,9 +10,16 @@
   "author": "3fuyu",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
+    "babel-plugin-transform-react-inline-elements": "^6.8.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.9",
+    "babel-plugin-transform-replace-object-assign": "^0.2.1",
+    "babel-preset-stage-1": "^6.13.0",
     "mongoose": "^4.5.8",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8",
+    "react": "^15.3.1",
+    "react-component": "0.0.0",
+    "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
     "react-router": "^2.0.0"
   },
   "devDependencies": {
@@ -42,8 +49,10 @@
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-hot-loader": "^3.0.0-beta.3",
+    "react-redux": "^4.4.5",
     "react-router": "^2.8.0",
     "reactify": "^1.1.0",
+    "redux": "^3.6.0",
     "store": "1.3.20",
     "style-loader": "^0.13.0",
     "superagent": "^1.8.0",
