--- a/web/package.json
+++ b/web/package.json
@@ -52,10 +52,13 @@
     "gulp-uglify": "^1.5.3",
     "gulp-zip": "^3.2.0",
     "history": "^2.0.1",
+    "jquery": "^3.1.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "lodash": "^3.6.0",
+    "marked": "^0.3.6",
     "material-ui": "^0.15.4",
+    "moment": "^2.15.1",
     "path": "^0.12.7",
     "react": "^15.3.1",
     "react-addons-perf": "^15.3.2",
