--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "css-loader": "^0.23.1",
     "fastclick": "^1.0.6",
     "history": "^2.0.1",
+    "http-proxy": "^1.15.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "lodash": "^3.6.0",
