--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "sudo node ./bin/www"
+    "start": "node ./bin/www"
   },
   "peerDependencies": {
     "react": "^15.0.0",
