--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "lodash": "^4.14.2",
+    "marked": "^0.3.6",
     "mongoose": "^4.5.8",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
