--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
     "fastclick": "^1.0.6",
+    "highlight.js": "^9.7.0",
     "history": "^2.0.1",
     "http-proxy": "^1.15.1",
     "less": "^2.7.1",
