--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --colors",
-    "start": "webpack-dev-server --config webpack.config.js --progress --colors --inline"
+    "start": "webpack-dev-server --config webpack.config.js --progress --colors --inline",
+    "browser:build": "NODE_ENV=docs-production webpack --config webpack-production.config.js --progress --colors --profile"
   },
   "author": "3fuyu",
   "license": "ISC",
