chip color 改为md5算法

--- a/web/package.json
+++ b/web/package.json
@@ -25,13 +25,14 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.2.9",
     "babel-plugin-transform-replace-object-assign": "^0.2.1",
     "babel-preset-stage-1": "^6.13.0",
+    "material-ui": "^0.15.4",
+    "md5": "^2.2.1",
     "mongoose": "^4.5.8",
     "react": "^15.3.1",
     "react-component": "0.0.0",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
-    "react-router": "^2.0.0",
-    "material-ui": "^0.15.4"
+    "react-router": "^2.0.0"
   },
   "devDependencies": {
     "autosize": "^3.0.15",
