--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "express-session": "^1.14.2",
     "jade": "~1.11.0",
     "lodash": "^4.14.2",
     "marked": "^0.3.6",
