调试上传接口, formidable

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "express-session": "^1.14.2",
+    "formidable": "^1.1.1",
     "jade": "~1.11.0",
     "lodash": "^4.14.2",
     "marked": "^0.3.6",
