--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fastclick": "^1.0.6",
     "highlight.js": "^9.7.0",
     "history": "^2.0.1",
+    "html-webpack-plugin": "^2.29.0",
     "http-proxy": "^1.15.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
