--- a/package.json
+++ b/package.json
@@ -6,57 +6,56 @@
     "start": "node ./bin/www"
   },
   "peerDependencies": {
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "react-tap-event-plugin": "^1.0.0"
+    "react": "15.0.0",
+    "react-dom": "15.0.0",
+    "react-tap-event-plugin": "1.0.0"
   },
   "dependencies": {
-    "body-parser": "~1.15.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.13.4",
-    "express-session": "^1.14.2",
-    "formidable": "^1.1.1",
-    "jade": "~1.11.0",
-    "lodash": "^4.14.2",
-    "marked": "^0.3.6",
-    "mongoose": "^4.5.8",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "body-parser": "1.15.1",
+    "cookie-parser": "1.4.3",
+    "debug": "2.2.0",
+    "express": "4.13.4",
+    "express-session": "1.14.2",
+    "formidable": "1.1.1",
+    "jade": "1.11.0",
+    "lodash": "4.14.2",
+    "marked": "0.3.6",
+    "mongoose": "4.5.8",
+    "morgan": "1.7.0",
+    "serve-favicon": "2.3.0"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.6.4",
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.7.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "fastclick": "^1.0.6",
-    "highlight.js": "^9.7.0",
-    "history": "^2.0.1",
-    "html-webpack-plugin": "^2.29.0",
-    "http-proxy": "^1.15.1",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "lodash": "^3.6.0",
-    "material-ui": "^0.15.4",
-    "moment": "^2.15.1",
-    "path": "^0.12.7",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-event-listener": "^0.3.0",
-    "react-hot-loader": "^3.0.0-beta.3",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.0",
-    "react-tap-event-plugin": "^1.0.0",
-    "reactify": "^1.1.0",
-    "redux": "^3.6.0",
-    "simple-assign": "^0.1.0",
+    "babel": "6.5.2",
+    "babel-core": "6.6.4",
+    "babel-loader": "6.2.4",
+    "babel-polyfill": "6.7.2",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
+    "css-loader": "0.23.1",
+    "fastclick": "1.0.6",
+    "highlight.js": "9.7.0",
+    "history": "2.0.1",
+    "html-webpack-plugin": "2.29.0",
+    "http-proxy": "1.15.1",
+    "less": "2.7.1",
+    "less-loader": "2.2.3",
+    "material-ui": "0.15.4",
+    "moment": "2.15.1",
+    "path": "0.12.7",
+    "react": "15.3.2",
+    "react-dom": "15.3.2",
+    "react-event-listener": "0.3.0",
+    "react-hot-loader": "3.0.0-beta.3",
+    "react-redux": "4.4.5",
+    "react-router": "2.8.0",
+    "react-tap-event-plugin": "1.0.0",
+    "reactify": "1.1.0",
+    "redux": "3.6.0",
+    "simple-assign": "0.1.0",
     "store": "1.3.20",
-    "style-loader": "^0.13.0",
-    "superagent": "^1.8.0",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.16.1"
+    "style-loader": "0.13.0",
+    "superagent": "1.8.0",
+    "webpack": "1.12.14",
+    "webpack-dev-server": "1.16.1"
   }
 }
